added POM start and Messe editing
kommentierte alle nicht Funktionalitäten
start Command: (maven) clean javafx:run
and for debugging: (maven) clean javafx:run@debug
and attach debugger on port 8000